# embodied-fl

./: Cargo.toml  Dockerfile  LICENSE  README.md  __init__ (2).py  __init__ (3).py  __init__.py  audit.rs  build.rs  client.py  detection_results.json  docker-compose.yml  hnsw_index.rs  requirements.txt  run_all.py  run_all_experiments.py  run_yolo_fl.py  streamlit_app.py  synthetic.py
experiments/: run_experiment.py
experiments/reading_fl/: dashboard.html  prototype.py
experiments/results/: experiment_results.json
experiments/vla_fed/: run_vla_federated.py
experiments/yolo_fed/: __init__.py  experiment.py  run_detection.py  run_yolo_federated.py
experiments/yolo_fed/data/: synthetic.py
experiments/yolo_fed/models/: detector.py
experiments/yolo_fed/results/: detection_results.json
experiments/yolo_fed/utils/: __init__.py
paper/paper/: paper.html
proto/: embodied_fl.proto
python/: requirements.txt
python/analysis/: __init__.py  action_tokenizer.py  instruction_embedding.py  instruction_parser.py  vla_collector.py  vla_dataset.py  vla_model.py
python/modules/: __init__.py
python/sim/: client.py
python/tests/: __init__.py  test_detector.py  test_feature_extractor.py  test_gradcam.py  test_instruction_embedding.py  test_multi_task_fl.py  test_vla.py
python/utils/: constants.py
results/vla_fed/: results_quick.json
src/: audit.rs  contribution_tracker.rs  fed_server.rs  grpc_service.rs  hnsw_index.rs  lib.rs  main.rs  rest_api.rs  task_embedding.rs  task_registry.rs  vector_db.rs  vla_service.rs  web_dashboard.rs
(+3 files in other folders)
